[package]
name = "wasp-cli"
version = "0.1.0"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2018"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-wasi = "2.0.0"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.9", features = ["full"] }
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
wasp = { path = "rust" }
pretty_env_logger = "0.4"
wapm-cli = "0.5.1"
structopt = { version = "0.3", features = ["color"] }
anyhow = "1"
wasmer-compiler-llvm = { version = "2.0.0", optional = true }
wasmer-compiler-cranelift = { version = "2.0.0", optional = true }
attohttpc = "0.17"

[build-dependencies]
protoc-rust = "2.0"

[features]
default = ["wasmer-compiler-cranelift"]
llvm = ["wasmer-compiler-llvm"]

[[bin]]
name = "wasp"
path = "./src/main.rs"
