[package]
name = "wasp"
version = "0.1.0"
edition = "2018"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.64"
serde_repr = "0.1"
wasp-macros = { path = "wasp-macros" }
capnp = "0.14"

[workspace]
members = ["wasp-macros"]
exclude = ["examples"]
