[package]
name = "wasp"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
wasp-macros = { path = "wasp-macros" }
protobuf = { version = "2", features = ["with-bytes"] }
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
http = "0.2.4"

[features]
default = ["with-serde"]
with-serde = []

[workspace]
members = ["wasp-macros"]
exclude = ["examples"]
