[package]
name = "wasmesh-pod"
version = "0.2.0"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
edition = "2021"
resolver = "2"
default-run = "wasmesh-pod"
description = "wasmesh(WebAssembly Service Mesh) is a WebAssembly service mesh framework."
license = "MIT OR Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmesh"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "webassembly", "servicemesh", "faas", "web"]
exclude = ["build.rs"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmesh-proto = "0.2.0"
wasmy-vm = "0.3.1"
tokio = { version = "1", features = ["full"] }
hyper = { version = "0.14.9", features = ["full"] }
num_cpus = "1.0"
serde = { version = "1.0", features = ["derive"] }
rand = "0.8.4"
pretty_env_logger = "0.4"
structopt = { version = "0.3", features = ["color"] }
ureq = { version = "2.3.0", features = ["tls", "cookies", "charset"] }
anyhow = "1"

[[bin]]
name = "wasmesh-pod"
path = "src/bin/wasmesh-pod.rs"

[[bin]]
name = "wasmesh-bench"
path = "src/bin/wasmesh-bench.rs"
