[package]
name = "wasmesh-proto"
edition = "2021"
version = "0.2.0"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmesh(WebAssembly Service Mesh) protocol definition"
license = "MIT OR Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmesh"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "webassembly", "servicemesh", "faas", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmy-abi = "0.2.3"
protobuf = { version = "2", features = ["with-bytes"] }
bytes = "1.0"
hyper = { version = "0.14.9", features = ["full"] }

[build-dependencies]
protoc-rust = "2.0"
