[package]
name = "wasmesh-vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmer = "2.0.0"
wasmer-engine-universal = "2.0.0"
wasmer-wasi = "2.0.0"
wasmer-compiler-cranelift = { version = "2.0.0" }
serde = { version = "1.0", features = ["derive"] }
pretty_env_logger = "0.4"
structopt = { version = "0.3", features = ["color"] }
anyhow = "1"
protobuf = { version = "2", features = ["with-bytes"] }
lazy_static = "1.4.0"
wasmesh-abi = { path = "../wasmesh-abi" }
wasmesh-vm-handler = { path = "./wasmesh-vm-handler" }

[features]
