[package]
name = "wasmesh"
version = "0.2.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmesh(WebAssembly Service Mesh) service SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmesh"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "webassembly", "servicemesh", "faas", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wasmesh-proto = "0.2.0"
wasmy-abi = "0.3.1"

[build-dependencies]
protoc-rust = "2.0"
