[package]
name = "wasp-sdk"
version = "0.1.0"
edition = "2018"
resolver = "2"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
#serde_json = "1.0.64"
serde_repr = "0.1"
wasp-macros = { path = "../wasp-macros" }
protobuf = { version = "2", features = ["with-bytes"] }
bytes = { version = "1", features = ["serde"] }

#[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
#wasmer = "2.0.0"

[build-dependencies]
protoc-rust = "2.0"

[features]
default = ["with-serde"]
with-serde = []
