[package]
name = "wasmesh"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "wasmesh(WebAssembly Service Mesh) SDK"
license = "MIT OR Apache-2.0"
repository = "https://github.com/henrylee2cn/wasmesh"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "webassembly", "servicemesh", "faas", "web"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_repr = "0.1"
wasmesh-macros = { path = "../wasmesh-macros", version = "0.1.0" }
protobuf = { version = "2", features = ["with-bytes"] }
bytes = { version = "1", features = ["serde"] }
anyhow = "1"
http = "0.2.4"

[features]
default = ["with-serde"]
with-serde = []
