[package]
name = "wasp-macros"
version = "0.1.0"
edition = "2021"
resolver = "2"
authors = ["henrylee2cn <henrylee2cn@gmail.com>"]
description = "WASP(WebAssembly Service Porter) SDK proc-macro"
repository = "https://github.com/henrylee2cn/wasp"
categories = ["wasm", "web-programming"]
keywords = ["wasm", "web", "servicemesh", "faas"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
proc-macro = true

[dependencies]
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0.7"

